fix: overflow-x on mobile resolution

--- a/projeto-bootstrap/style.css
+++ b/projeto-bootstrap/style.css
@@ -6,9 +6,12 @@
     box-sizing: border-box;
 }
 
-html{
+html,
+body,
+main{
     overflow-x: hidden;
 }
+
 
 header{
     background: rgba(255,255,255,0.2);
@@ -142,7 +145,7 @@ header{
 
 .intro-text .intro-images{
     width: 100%;
-    min-width: 700px;
+    /* min-width: 700px; */
 
     margin: 30px 0 40px 0;
 
@@ -787,6 +790,14 @@ footer .low-footer{
 
     #tabs .row aside nav button{
         width: 49.5%;
+    }
+
+    .tab-item h2{
+        font-size: 40px !important;
+    }
+
+    .tab-item li{
+        font-size: 10px !important;
     }
 
     footer form button{
